# rag-serverless

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  conftest.py  pyproject.toml  samconfig.toml  template.yaml
lambdas/chat/: app.py  query.py
lambdas/embedding/: app.py  indexing.py
lambdas/embedding/data/: Cho-vay-hộ-gia-đình-sản-xuất-kinh-doanh-vùng-khó-khăn.md  HSSV-khó-khăn.md  Hộ-cận-nghèo.md  Hộ-nghèo.md
layers/langchain_py/: db_connection.py
local/UI/: main.py
local/data/: Cho-vay-nhà-ngập-lũ-ĐBSCL.md  Cho-vay-nhà-ở-xã-hội-theo-NĐ-100.md  Giải-quyết-việc-làm.md  Mới-thoát-nghèo.md  Nước-sạch-và-vệ-sinh-môi-trường-NT.md  Đi-làm-ở-nước-ngoài.md
script/: init.sql
