[tool.poetry]
name = "wb-ic-chatbot-backend"
version = "0.1.0"
description = ""
authors = ["kiet.lamtuan"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.dev.dependencies]
aws-sam-cli = "^1.133.0"
pre-commit = "^4.1.0"
truststore = "^0.10.0"
pytest = "^8.3.3"
poetry-plugin-export = "^1.8.0"
ruff = "^0.7.2"
isort = "^5.13.2"

# Functions
# [tool.poetry.group.chat.dependencies]

# [tool.poetry.group.embedding.dependencies]


# Layers
[tool.poetry.group.langchain_py.dependencies]
aws-lambda-powertools = { extras = ["tracer"], version = "^3.0.0" }

langchain_community = "^0.3.27"
langchain = "^0.3.27"
langchain_aws = "^0.2.30"
langchain_postgres = "^0.0.15"
langchain_core = "^0.3.72"
langchain_pinecone = "^0.2.11"

boto3 = "^1.35.34"
urllib3 = ">=2.5.0"
cryptography = ">=44.0.1"
protobuf = ">=6.31.1"
pydantic = "^2.9.2"
requests = "^2.32.4"
psycopg-binary = "^3.2.9"
pinecone = "^7.3.0"
greenlet = "^3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"